--- a/js.html
+++ b/js.html
@@ -1,5 +1,6 @@
 <meta charset="utf-8">
 <script type="text/javascript">
+    // test
     function getRandomInt(min, max) {
         return Math.floor(Math.random() * (max - min + 1)) + min;
     }
